# backend

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  pyproject.toml
src/apps/about_me/: admin.py  apps.py  models.py  urls.py  validators.py  views.py
src/apps/about_me/migrations/: 0001_initial.py  0002_alter_contactlink_options.py  0003_technology_alter_contactlink_options.py  0004_technologysubstitute_technologypair.py  0005_technologyblock_remove_technologypair_obj_1_and_more.py  0006_alter_timelineelement_options_and_more.py  0007_alter_maininfo_location_alter_maininfo_name.py  0008_alter_contactlink_link.py
src/apps/about_me/models/: __init__.py  main_info.py  timeline.py
src/apps/helpers/: serializers.py
src/apps/projects/: admin.py  models.py  urls.py  views.py
src/apps/projects/migrations/: 0001_initial.py  0002_alter_project_overview_video.py  0002_alter_technology_options.py  0003_alter_projectarticle_title.py  0003_remove_technologysubstitute_obj_and_more.py  0004_alter_technology_options_and_more.py  0005_rename_date_created_project_month_created.py  0006_projectoverviewvideo_remove_project_overview_video.py  0007_project_overview_video_and_more.py  0008_project_short_description.py  0009_alter_project_short_description_and_more.py  0010_alter_project_overview_video_and_more.py  0011_alter_instrument_options_alter_technology_options.py  0012_alter_project_options.py  0013_alter_project_name.py  (+2 more)
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py
(+5 files in other folders)
